# velthoryn

./: .gitignore  Anchor.toml  BE-SC-MERKLE-DEPLOY.md  CLAUDE.md  README.md  debug-out.txt  package.json  pnpm-lock.yaml  report-week3.md  test-clock-validation.sh  tsconfig.json  verify-clock-validation.js
bd-docs/: tokenpicker.md
docs/: API_ROUTE_TRUST_BOUNDARIES.md  API_TRUST_BOUNDARIES.md  AUDIT_REPORT.md  AUTOMATIC_CLAWBACK.md  BACKEND_API.md  BE-SC-MERKLE-ACCEPTANCE-STATUS.md  CLOCK_VALIDATION_IMPROVEMENTS.md  CREATE_CAMPAIGN_VS_CREATE_STREAM.md  CU_BUDGET.md  DEVNET_TEST_RESULTS.md  E2E_BE_VERIFICATION.md  ERROR_MAP.md  FE_INTEGRATION.md  INTEGRATION.md  KNOWN_ISSUE_29_DESIGN.md  MAINNET_CHECKLIST.md  MATURITY_REPORT.md  PDD_GERAL.md  PDD_LANA.md  PENDING_WORK.md  PRD_GERAL.md  PRD_LANA.md  PROGRAM.md  README.md  ROOT_ROTATION_GUIDE.md  SECURITY.md  SECURITY_GERAL.md  SHIP-PATH-NEXT.md  STREAM_MODEL.md  SUMMARY.md  TDD_GERAL.md  TDD_LANA.md  TESTING.md  TESTING_TOOLS.md  TESTING_TOOLS_REPORT.md  TRANSPARENCY_DASHBOARD.md  WEEK7_SECURITY_CHECKLIST_GDOC.md  WEEK8_KNOWN_ISSUES.md  WEEK8_PERFORMANCE_REPORT.md  _sidebar.md  (+3 more)
programs/vesting/: Cargo.toml
programs/vesting/benches/: compute_units.md
programs/vesting/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/vesting/src/instructions/: cancel_campaign.rs  cancel_stream.rs  claim.rs  close_claim_record.rs  create_campaign.rs  create_stream.rs  fund_campaign.rs  get_vested_amount.rs  instant_refund_campaign.rs  mod.rs  pause_campaign.rs  set_milestone_released.rs  update_root.rs  withdraw.rs  withdraw_unvested.rs
programs/vesting/src/math/: merkle.rs  schedule.rs
programs/vesting/src/state/: claim_record.rs  leaf.rs  mod.rs  vesting_tree.rs
programs/vesting/tests/: admin.rs  benchmarks.rs  cancel.rs  claim.rs  cleanup.rs  compute_units.rs  instructions.rs  lifecycle.rs  stream.rs  test_helpers.rs  withdraw_unvested.rs
scripts/: benchmark-merkle.ts  create-multi-milestone.ts  debug-create-stream.cjs  test-be-merkle-pipeline.ts  test-devnet.sh  (+3 more)
(+521 files in other folders)
