[package]
name = "vesting"
version = "0.1.0"
description = "Velthoryn — Merkle-compressed Solana token distribution with vesting and clawback"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
solana-keccak-hasher = "2.2"

[dev-dependencies]
hex = "0.4"
